--- a/views/quest.ejs
+++ b/views/quest.ejs
@@ -1,9 +1,9 @@
-<%- include('partials/header'); %> <%- include('partials/navbar', {link:
-'events'}); %>
+<%- include('partials/header'); %> 
+<%- include('partials/navbar', {link:'events'}); %>
 
 <div class="container">
     <div>
-        <h1 class="d-flex justify-content-center">Quest: <%= quest.title %></h1>
+        <h1 class="d-flex justify-content-center"><%= quest.title %></h1>
 
         <p class="d-flex justify-content-center"><%= quest.description %></p>
     </div>
