--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/navbar', {link: 'home'}); %>
 
 <div class="container">
-    <h1>Hello internet</h1>
+    <h1>Hello Internet</h1>
 
     <p>Just a homepage of our lovely project</p>
 </div>
