--- a/views/forms/create-quest.ejs
+++ b/views/forms/create-quest.ejs
@@ -7,6 +7,10 @@
         <label class="form-label">Description</label>
         <input type="text" class="form-control" name="description">
     </div>
+    <div class="mb-3">
+        <label class="form-label">NFT CID</label>
+        <input type="text" class="form-control" name="nft_cid">
+    </div>
     <input type="hidden" value="<%= event._id %>" name="eventId">
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
